# mpt-batch

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml.example  jobs.example.yaml  pyproject.toml  voices.example.yaml
.github/workflows/: lint.yml
src/mpt_batch/: batch.py
src/mpt_batch/data/: edge_voices.json
src/mpt_batch/engine/: api.py  bgm.py  notify.py  seen.py  settings.py  state.py  voices.py
tests/: __init__.py  test_api_state.py  test_lang.py  test_notify.py  test_seen.py  test_state.py  test_voices.py
