[project]
name = "mpt-batch"
version = "1.0.1"
description = "Batch video generator for MoneyPrinterTurbo — define jobs in YAML, generate unattended, resume safely"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
batch = "mpt_batch.batch:main"

[project.urls]
Repository = "https://github.com/korosu/mpt-batch"
Issues = "https://github.com/korosu/mpt-batch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpt_batch"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[project.optional-dependencies]
dev = ["ruff>=0.15.20", "pytest>=8.0"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=8.0",
]
